--- a/index.html
+++ b/index.html
@@ -11,15 +11,106 @@
     </head>
 
     <body>
-        <header>
+        <!-- header section -->
+        <header></header>
 
-        </header>
+        <!-- main section -->
         <main>
-            <section>
+            <!-- product section -->
+            <section class="mx-auto w-3/4 mt-8">
+                <div class="grid grid-cols-3 gap-8">
+                    <div>
+                        <img src="images/mac.png" alt="" srcset="">
+                    </div>
+                    <div class="grid grid-cols-1 col-span-2 mx-auto px-4">
+                        <div>
+                            <h1 class="text-5xl font-semibold leading-tight">Customize Your Blue 24-inch iMac with Apple
+                                M1 Chip</h1>
+                            <p class="my-2">Apple M1 chip with 8-cote CPU with 4 performance cores and 4 efficiency
+                                cores, 7-core
+                                Gpu, and 16-core Neural Engine 8GB unified memory 256GB SSD storage Two Thunderbolt/USB
+                                4 ports Magic Mouse Magic Keyboard -US English </p>
+                        </div>
+                        <div class="mb-4">
+                            <h4 class="text-xl my-2 font-bold">
+                                Memory
+                            </h4>
+                            <button
+                                class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium">8GB
+                                unified
+                                memory</button>
+                            <button
+                                class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium">16GB
+                                unified memory</button>
+                        </div>
+                        <div class="mb-4">
+                            <h4 class="text-xl my-2 font-bold">
+                                Storage
+                            </h4>
+                            <button
+                                class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium">256GB
+                                SSD Storage</button>
+                            <button
+                                class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium">5126GB
+                                SSD Storage</button>
+                            <button
+                                class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium">1TB
+                                SSD Storage</button>
+                        </div>
+                        <div class="mb-4">
+                            <h4 class="text-xl my-2 font-bold">
+                                Choose your delivery option
+                            </h4>
+                            <button
+                                class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium">Friday,
+                                Aug 25 Free Prime Delivery</button>
+                            <button
+                                class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium">Friday,
+                                Aug 21 Delivery Charge $20</button>
+                        </div>
+                        <div>
+                            <table class="table-auto mt-8">
+                                <tr class="border-b-2 border-gray-200">
+                                    <td class="font-bold block my-1">Best Price</td>
 
+                                    <td class="font-bold pl-12">$1299</td>
+                                </tr>
+                                <tr class="border-b-2 border-gray-200">
+                                    <td class="font-bold block my-1">Extra Memory Cost</td>
+                                    <td class="font-bold pl-12">$0</td>
+                                </tr>
+                                <tr class="border-b-2 border-gray-200">
+                                    <td class="font-bold block my-1">Extra Storage Cost</td>
+                                    <td class="font-bold pl-12">$0</td>
+                                </tr>
+                                <tr class="border-b-2 border-gray-600">
+                                    <td class="font-bold block my-1">Delivery Charge</td>
+                                    <td class="font-bold pl-12">$0</td>
+                                </tr>
+                                <tr class="border-b-2 border-gray-200">
+                                    <td class="font-bold block my-1">Total Price</td>
+                                    <td class="font-bold pl-12">$1299</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div>
+                            <h6 class="font-semibold text-base mt-4 mb-1">Add Promo code</h6>
+                            <input class="border border-gray-200 p-1 rounded-md focus:ring-1 focus:ring-gray-200"
+                                type="text" name="" id="">
+                            <button
+                                class="rounded-md bg-red-500 font-normal py-1 px-2 text-white hover:bg-gray-700 hover:text-white">Apply</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="mx-auto mt-4">
+                    <h1 class="text-center text-5xl font-semibold border-t-2 border-gray-200 py-4">Total: $1299 </h1>
+                </div>
             </section>
         </main>
+
+        <!-- footer section -->
         <footer></footer>
+
         <!-- javascript file integration  -->
         <script src="js/main.js"></script>
     </body>
