--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
         <!-- main section -->
         <main>
             <!-- product section -->
-            <section class="mx-auto w-3/4 mt-8">
+            <section class="mx-auto w-5/6 mt-8">
                 <div class="grid grid-cols-3 gap-8">
-                    <div>
+                    <div class="w-full">
                         <img src="images/mac.png" alt="" srcset="">
                     </div>
                     <div class="grid grid-cols-1 col-span-2 mx-auto px-4">
-                        <div>
-                            <h1 class="text-5xl font-semibold leading-tight">Customize Your Blue 24-inch iMac with Apple
-                                M1 Chip</h1>
-                            <p class="my-2">Apple M1 chip with 8-cote CPU with 4 performance cores and 4 efficiency
+                        <div class="w-9/12">
+                            <h1 class="text-4xl font-semibold leading-tight">Customize your Blue 24-inch iMac with Apple
+                                M1 chip.</h1>
+                            <p class="my-2">Apple M1 chip with 8-cote CPU with 4 performance cores and 4
+                                efficiency
                                 cores, 7-core
                                 Gpu, and 16-core Neural Engine 8GB unified memory 256GB SSD storage Two Thunderbolt/USB
                                 4 ports Magic Mouse Magic Keyboard -US English </p>
@@ -103,7 +104,7 @@
                     </div>
                 </div>
                 <div class="mx-auto mt-4">
-                    <h1 class="text-center text-5xl font-semibold border-t-2 border-gray-200 py-4">Total: $1299 </h1>
+                    <h1 class="text-center text-4xl font-semibold border-t-2 border-gray-200 py-4">Total: $1299 </h1>
                 </div>
             </section>
         </main>
