--- a/index.html
+++ b/index.html
@@ -1,119 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Buy iMac with Apple M1 Chip</title>
-        <!-- tailwind css -->
-        <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Buy iMac with Apple M1 Chip</title>
+    <!-- tailwind css -->
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+</head>
 
-    <body>
-        <!-- header section -->
-        <header></header>
+<body>
+    <!-- header section -->
+    <header></header>
 
-        <!-- main section -->
-        <main>
-            <!-- product section -->
-            <section class="mx-auto w-5/6 mt-8">
-                <div class="grid grid-cols-3 gap-8">
-                    <div class="w-full">
-                        <img src="images/mac.png" alt="" srcset="">
+    <!-- main section -->
+    <main>
+        <!-- product section -->
+        <section class="mx-auto w-5/6 mt-8">
+            <div class="grid grid-cols-3 gap-8">
+                <div class="w-full">
+                    <img src="images/mac.png" alt="" srcset="">
+                </div>
+                <!-- product details header -->
+                <div class="grid grid-cols-1 col-span-2 mx-auto px-4">
+                    <div class="w-9/12">
+                        <h1 class="text-4xl font-semibold leading-tight">Customize your Blue 24-inch iMac with Apple
+                            M1 chip.</h1>
+                        <!-- product detail -->
+                        <p class="my-2">Apple M1 chip with 8-cote CPU with 4 performance cores and 4
+                            efficiency
+                            cores, 7-core
+                            Gpu, and 16-core Neural Engine 8GB unified memory 256GB SSD storage Two Thunderbolt/USB
+                            4 ports Magic Mouse Magic Keyboard -US English </p>
                     </div>
-                    <div class="grid grid-cols-1 col-span-2 mx-auto px-4">
-                        <div class="w-9/12">
-                            <h1 class="text-4xl font-semibold leading-tight">Customize your Blue 24-inch iMac with Apple
-                                M1 chip.</h1>
-                            <p class="my-2">Apple M1 chip with 8-cote CPU with 4 performance cores and 4
-                                efficiency
-                                cores, 7-core
-                                Gpu, and 16-core Neural Engine 8GB unified memory 256GB SSD storage Two Thunderbolt/USB
-                                4 ports Magic Mouse Magic Keyboard -US English </p>
-                        </div>
-                        <div class="mb-4">
-                            <h4 class="text-xl my-2 font-bold">
-                                Memory
-                            </h4>
-                            <button
-                                class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium">8GB
-                                unified
-                                memory</button>
-                            <button
-                                class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium">16GB
-                                unified memory</button>
-                        </div>
-                        <div class="mb-4">
-                            <h4 class="text-xl my-2 font-bold">
-                                Storage
-                            </h4>
-                            <button
-                                class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium">256GB
-                                SSD Storage</button>
-                            <button
-                                class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium">5126GB
-                                SSD Storage</button>
-                            <button
-                                class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium">1TB
-                                SSD Storage</button>
-                        </div>
-                        <div class="mb-4">
-                            <h4 class="text-xl my-2 font-bold">
-                                Choose your delivery option
-                            </h4>
-                            <button
-                                class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium">Friday,
-                                Aug 25 Free Prime Delivery</button>
-                            <button
-                                class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium">Friday,
-                                Aug 21 Delivery Charge $20</button>
-                        </div>
-                        <div>
-                            <table class="table-auto mt-8">
-                                <tr class="border-b-2 border-gray-200">
-                                    <td class="font-bold block my-1">Best Price</td>
+                    <!-- memory option -->
+                    <div class="mb-4">
+                        <h4 class="text-xl my-2 font-bold">
+                            Memory
+                        </h4>
+                        <!-- 8gb memory button -->
+                        <button id="memory-8gb"
+                            class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium"
+                            value="0">8GB
+                            unified
+                            memory</button>
+                        <!-- 16gb memory button -->
+                        <button id="memory-16gb"
+                            class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium"
+                            value="180">16GB
+                            unified memory</button>
+                    </div>
 
-                                    <td class="font-bold pl-12">$1299</td>
-                                </tr>
-                                <tr class="border-b-2 border-gray-200">
-                                    <td class="font-bold block my-1">Extra Memory Cost</td>
-                                    <td class="font-bold pl-12">$0</td>
-                                </tr>
-                                <tr class="border-b-2 border-gray-200">
-                                    <td class="font-bold block my-1">Extra Storage Cost</td>
-                                    <td class="font-bold pl-12">$0</td>
-                                </tr>
-                                <tr class="border-b-2 border-gray-600">
-                                    <td class="font-bold block my-1">Delivery Charge</td>
-                                    <td class="font-bold pl-12">$0</td>
-                                </tr>
-                                <tr class="border-b-2 border-gray-200">
-                                    <td class="font-bold block my-1">Total Price</td>
-                                    <td class="font-bold pl-12">$1299</td>
-                                </tr>
-                            </table>
-                        </div>
-                        <div>
-                            <h6 class="font-semibold text-base mt-4 mb-1">Add Promo code</h6>
-                            <input class="border border-gray-200 p-1 rounded-md focus:ring-1 focus:ring-gray-200"
-                                type="text" name="" id="">
-                            <button
-                                class="rounded-md bg-red-500 font-normal py-1 px-2 text-white hover:bg-gray-700 hover:text-white">Apply</button>
-                        </div>
+                    <!-- storage option -->
+
+                    <div class=" mb-4">
+                        <h4 class="text-xl my-2 font-bold">
+                            Storage
+                        </h4>
+                        <!-- 256gb storage button -->
+                        <button id="storage-256gb"
+                            class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium"
+                            value="0">256GB
+                            SSD Storage</button>
+                        <!-- 512gb storage button -->
+                        <button id="storage-512gb"
+                            class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium"
+                            value="100">5126GB
+                            SSD Storage</button>
+                        <!-- 1tb storage button -->
+                        <button id="storage-1tb"
+                            class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium"
+                            value="180">1TB
+                            SSD Storage</button>
+                    </div>
+
+                    <!-- delivery option -->
+
+                    <div class="mb-4">
+                        <h4 class="text-xl my-2 font-bold">
+                            Choose your delivery option
+                        </h4>
+                        <!-- free delivery button -->
+                        <button id="delivery-free"
+                            class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium"
+                            value="0">Friday,
+                            Aug 25 Free Prime Delivery</button>
+                        <!-- paid delivery button -->
+                        <button id="delivery-paid"
+                            class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium"
+                            value="20">Friday,
+                            Aug 21 Delivery Charge $20</button>
+                    </div>
+
+                    <!-- calculation -->
+
+                    <div>
+                        <table class="table-auto mt-8">
+                            <!-- base price -->
+                            <tr class="border-b-2 border-gray-200">
+                                <td class="font-bold block my-1">Best Price</td>
+                                <td class="font-bold pl-12">$<span id="best-price">1299</td>
+                            </tr>
+                            <!-- memory price calculation -->
+                            <tr class="border-b-2 border-gray-200">
+                                <td class="font-bold block my-1">Extra Memory Cost</td>
+                                <td class="font-bold pl-12">$<span id="memory-price">0</span> </td>
+                            </tr>
+                            <!-- storage price calculation -->
+                            <tr class="border-b-2 border-gray-200">
+                                <td class="font-bold block my-1">Extra Storage Cost</td>
+                                <td class="font-bold pl-12">$<span id="storage-price">0</span> </td>
+                            </tr>
+                            <!-- delivery charge calculation -->
+                            <tr class="border-b-2 border-gray-600">
+                                <td class="font-bold block my-1">Delivery Charge</td>
+                                <td class="font-bold pl-12">$<span id="delivery-charge">0</span></td>
+                            </tr>
+                            <!-- total price calculation -->
+                            <tr class="border-b-2 border-gray-200">
+                                <td class="font-bold block my-1">Total Price</td>
+                                <td class="font-bold pl-12">$<span id="total-price">1299</span></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div>
+                        <!-- promo code  -->
+                        <h6 class="font-semibold text-base mt-4 mb-1">Add Promo code</h6>
+                        <input class="border border-gray-200 p-1 rounded-md focus:ring-1 focus:ring-gray-200"
+                            type="text" name="" id="promo-input">
+                        <!-- promo button -->
+                        <button id="promo-button"
+                            class="rounded-md bg-red-500 font-normal py-1 px-2 text-white hover:bg-gray-700 hover:text-white">Apply</button>
                     </div>
                 </div>
-                <div class="mx-auto mt-4">
-                    <h1 class="text-center text-4xl font-semibold border-t-2 border-gray-200 py-4">Total: $1299 </h1>
-                </div>
-            </section>
-        </main>
+            </div>
+            <!-- promo total -->
+            <div class="mx-auto mt-4">
+                <h1 class="text-center text-4xl font-semibold border-t-2 border-gray-200 py-4">Total: $<span
+                        id="promo-price">1299</span> </h1>
+            </div>
+        </section>
+    </main>
 
-        <!-- footer section -->
-        <footer></footer>
+    <!-- footer section -->
+    <footer></footer>
 
-        <!-- javascript file integration  -->
-        <script src="js/main.js"></script>
-    </body>
+    <!-- javascript file integration  -->
+    <script src="js/main.js"></script>
+</body>
 
 </html>
