--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             type="text" name="" id="promo-input">
                         <!-- promo button -->
                         <button id="promo-button"
-                            class="rounded-md bg-red-500 font-normal py-1 px-2 text-white hover:bg-gray-700 hover:text-white">Apply</button>
+                            class="rounded-md bg-red-500 font-normal py-1 px-2 text-white hover:bg-gray-700 hover:text-white focus:ring-2 focus:ring-gray-400">Apply</button>
                     </div>
                 </div>
             </div>
