--- a/index.html
+++ b/index.html
@@ -127,11 +127,12 @@
                     <div>
                         <!-- promo code  -->
                         <h6 class="font-semibold text-base mt-4 mb-1">Add Promo code</h6>
-                        <input class="border border-gray-200 p-1 rounded-md focus:ring-1 focus:ring-gray-200"
+                        <input
+                            class="border border-gray-200 p-1 focus:outline-none rounded-md focus:ring focus:ring-gray-400"
                             type="text" name="" id="promo-input">
                         <!-- promo button -->
                         <button id="promo-button"
-                            class="rounded-md bg-red-500 font-normal py-1 px-2 text-white hover:bg-gray-700 hover:text-white focus:ring-2 focus:ring-gray-400">Apply</button>
+                            class="rounded-md bg-red-500 font-normal py-1 px-2 text-white hover:bg-red-600 hover:text-white focus:ring focus:ring-red-400">Apply</button>
                     </div>
                 </div>
             </div>
