--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                 <div class="w-full">
                     <img src="images/mac.png" alt="" srcset="">
                 </div>
-                <!-- product details header -->
+                <!-- product header -->
                 <div class="grid grid-cols-1 col-span-2 mx-auto px-4">
                     <div class="w-9/12">
                         <h1 class="text-4xl font-semibold leading-tight">Customize your Blue 24-inch iMac with Apple
                             M1 chip.</h1>
-                        <!-- product detail -->
+                        <!-- product details -->
                         <p class="my-2">Apple M1 chip with 8-cote CPU with 4 performance cores and 4
                             efficiency
                             cores, 7-core
@@ -62,17 +62,17 @@
                         <button id="storage-256gb"
                             class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium"
                             value="0">256GB
-                            SSD Storage</button>
+                            SSD storage</button>
                         <!-- 512gb storage button -->
                         <button id="storage-512gb"
                             class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium"
                             value="100">5126GB
-                            SSD Storage</button>
+                            SSD storage</button>
                         <!-- 1tb storage button -->
                         <button id="storage-1tb"
                             class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium"
                             value="180">1TB
-                            SSD Storage</button>
+                            SSD storage</button>
                     </div>
 
                     <!-- delivery option -->
@@ -85,12 +85,12 @@
                         <button id="delivery-free"
                             class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium"
                             value="0">Friday,
-                            Aug 25 Free Prime Delivery</button>
+                            Aug 27 FREE Prime Delivery</button>
                         <!-- paid delivery button -->
                         <button id="delivery-paid"
                             class="border border-gray-400 p-2 rounded-md focus:ring-2 focus:ring-gray-400 hover:bg-gray-700 hover:text-white font-medium"
                             value="20">Friday,
-                            Aug 21 Delivery Charge $20</button>
+                            Aug 20 Delivery Charge $20</button>
                     </div>
 
                     <!-- calculation -->
@@ -99,40 +99,40 @@
                         <table class="table-auto mt-8">
                             <!-- base price -->
                             <tr class="border-b-2 border-gray-200">
-                                <td class="font-bold block my-1">Best Price</td>
-                                <td class="font-bold pl-12">$<span id="best-price">1299</td>
+                                <td class="font-bold block my-1 pl-2">Best Price</td>
+                                <td class="font-bold pl-12 pr-6">$1299</td>
                             </tr>
                             <!-- memory price calculation -->
                             <tr class="border-b-2 border-gray-200">
-                                <td class="font-bold block my-1">Extra Memory Cost</td>
-                                <td class="font-bold pl-12">$<span id="memory-price">0</span> </td>
+                                <td class="font-bold block my-1 pl-2">Extra Memory Cost</td>
+                                <td class="font-bold pl-12  pr-6">$<span id="memory-price">0</span> </td>
                             </tr>
                             <!-- storage price calculation -->
                             <tr class="border-b-2 border-gray-200">
-                                <td class="font-bold block my-1">Extra Storage Cost</td>
-                                <td class="font-bold pl-12">$<span id="storage-price">0</span> </td>
+                                <td class="font-bold block my-1 pl-2">Extra Storage Cost</td>
+                                <td class="font-bold pl-12 pr-6">$<span id="storage-price">0</span> </td>
                             </tr>
                             <!-- delivery charge calculation -->
                             <tr class="border-b-2 border-gray-600">
-                                <td class="font-bold block my-1">Delivery Charge</td>
-                                <td class="font-bold pl-12">$<span id="delivery-charge">0</span></td>
+                                <td class="font-bold block my-1 pl-2">Delivery Charge</td>
+                                <td class="font-bold pl-12 pr-6">$<span id="delivery-charge">0</span></td>
                             </tr>
                             <!-- total price calculation -->
                             <tr class="border-b-2 border-gray-200">
-                                <td class="font-bold block my-1">Total Price</td>
-                                <td class="font-bold pl-12">$<span id="total-price">1299</span></td>
+                                <td class="font-bold block my-1 pl-2">Total Price</td>
+                                <td class="font-bold pl-12 pr-6">$<span id="total-price">1299</span></td>
                             </tr>
                         </table>
                     </div>
                     <div>
                         <!-- promo code  -->
-                        <h6 class="font-semibold text-base mt-4 mb-1">Add Promo code</h6>
+                        <h6 class="font-semibold text-base mt-4 mb-1">Add Promo Code</h6>
                         <input
-                            class="border border-gray-200 p-1 focus:outline-none rounded-md focus:ring focus:ring-gray-400"
+                            class="border border-gray-200 p-1 px-3 focus:outline-none rounded-md focus:ring focus:ring-gray-400"
                             type="text" name="" id="promo-input">
                         <!-- promo button -->
                         <button id="promo-button"
-                            class="rounded-md bg-red-500 font-normal py-1 px-2 text-white hover:bg-red-600 hover:text-white focus:ring focus:ring-red-400">Apply</button>
+                            class="rounded-md bg-red-500 font-normal py-1 px-3 text-white hover:bg-red-600 hover:text-white focus:ring focus:ring-red-400">Apply</button>
                     </div>
                 </div>
             </div>
