indent and main js to app js

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <footer></footer>
 
     <!-- javascript file integration  -->
-    <script src="js/main.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
