--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             Gpu, and 16-core Neural Engine 8GB unified memory 256GB SSD storage Two Thunderbolt/USB
                             4 ports Magic Mouse Magic Keyboard -US English </p>
                     </div>
-                    <!-- memory option -->
+                    <!-- memory options -->
                     <div class="mb-4">
                         <h4 class="text-xl my-2 font-bold">
                             Memory
@@ -52,7 +52,7 @@
                             unified memory</button>
                     </div>
 
-                    <!-- storage option -->
+                    <!-- storage options -->
                     <div class=" mb-4">
                         <h4 class="text-xl my-2 font-bold">
                             Storage
@@ -74,7 +74,7 @@
                             SSD storage</button>
                     </div>
 
-                    <!-- delivery option -->
+                    <!-- delivery options -->
                     <div class="mb-4">
                         <h4 class="text-xl my-2 font-bold">
                             Choose your delivery option
@@ -91,7 +91,7 @@
                             Aug 20 Delivery Charge $20</button>
                     </div>
 
-                    <!-- calculation -->
+                    <!-- calculation fields -->
                     <div>
                         <table class="table-auto mt-8">
                             <!-- base price -->
@@ -99,22 +99,22 @@
                                 <td class="font-bold block my-1 pl-2">Best Price</td>
                                 <td class="font-bold pl-12 pr-6">$1299</td>
                             </tr>
-                            <!-- memory price calculation -->
+                            <!-- memory price field -->
                             <tr class="border-b-2 border-gray-200">
                                 <td class="font-bold block my-1 pl-2">Extra Memory Cost</td>
                                 <td class="font-bold pl-12  pr-6">$<span id="memory-price">0</span> </td>
                             </tr>
-                            <!-- storage price calculation -->
+                            <!-- storage price field -->
                             <tr class="border-b-2 border-gray-200">
                                 <td class="font-bold block my-1 pl-2">Extra Storage Cost</td>
                                 <td class="font-bold pl-12 pr-6">$<span id="storage-price">0</span> </td>
                             </tr>
-                            <!-- delivery charge calculation -->
+                            <!-- delivery charge field -->
                             <tr class="border-b-2 border-gray-600">
                                 <td class="font-bold block my-1 pl-2">Delivery Charge</td>
                                 <td class="font-bold pl-12 pr-6">$<span id="delivery-charge">0</span></td>
                             </tr>
-                            <!-- total price calculation -->
+                            <!-- total price field -->
                             <tr class="border-b-2 border-gray-200">
                                 <td class="font-bold block my-1 pl-2">Total Price</td>
                                 <td class="font-bold pl-12 pr-6">$<span id="total-price">1299</span></td>
@@ -133,7 +133,7 @@
                     </div>
                 </div>
             </div>
-            <!-- promo total -->
+            <!-- promo total field -->
             <div class="mx-auto mt-4">
                 <h1 class="text-center text-4xl font-semibold border-t-2 border-gray-200 py-4">Total: $<span
                         id="promo-price">1299</span> </h1>
